# ismrmrd

./: .cirrus.yml  .codespellrc  .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.build-static  Dockerfile.build-variants  Dockerfile.clion  LICENSE  README.html  README.md  TODO.md  _clang-format  conanfile.py  environment.yml  ismrmrd.c  ismrmrd.cpp  ismrmrd.h  ismrmrd.hpp  ismrmrd.spec.rpkg  ismrmrd_dataset.c  ismrmrd_dataset.cpp  ismrmrd_dataset.h  ismrmrd_hdf5.cpp  ismrmrd_hdf5.h  ismrmrd_hdf5_datatypes.h  ismrmrd_xsd_export.h  justfile  main.cpp  test_create_dataset.cpp  test_recon_dataset.cpp  todo.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.bashrc  devcontainer.json
.github/ISSUE_TEMPLATE/: feature-proposal--spec-.md
.github/workflows/: ismrmrd_build.yml  ismrmrd_conan_build.yml  ismrmrd_conda.yml  ismrmrd_cpp98_smoketest.yml  ismrmrd_matlab.yml  ismrmrd_windows_build.yml  rpkg_build.yml
bindings/: CMakeLists.txt  ismrmrd.i
bindings/java/: CMakeLists.txt  JNILibLoader.java  XMLString.java  cfg.jxb  ismrmrd_java.i  make_jar.sh  make_jar.sh.in  runme.java
bindings/python/: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README  cismrmrd.pxd  cismrmrd.pxd.bak  demo.py  ismrmrd.c  ismrmrd.i  ismrmrd.pyx  ismrmrd.pyx.bak  ismrmrd_python.i  setup.py  test.py  usage.py
cmake/: CPackDeb.cmake  FindFFTW.cmake  FindFFTW3.cmake  FindIsmrmrd.cmake  FindJava.cmake  FindPugiXML.cmake  FindXSD.cmake  ISMRMRDConfig.cmake.in  IsmrmrdConfig.cmake.in  cpack_options.cmake.in  ismrmrd_cpack.cmake
conda/: .gitignore  build.sh  conda_build_config.yaml  environment.yml  meta.yaml  package.sh  run_test.py  setup-conda-build.sh
debian/: changelog  control  copyright  files  ismrmrd-schema.install  ismrmrd-tools.lintian-overrides  libismrmrd-dev.dirs  libismrmrd-dev.install  libismrmrd-matlab.dirs  libismrmrd-matlab.install  libismrmrd.install  not-installed  rules  watch
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  MRD Data Primatives copy.md  Makefile.sphinx.in  README.rst  TODO.rst  WindowsISMRMRDInstallDependencies.ps1  api.rst  building.md  c-api.rst  conf.py  cpp-api.rst  cpplibrary.md  cpplibrary.rst  create_ismrmrd_documentation.xsl  filestorage.rst  flexibleHeader.md  flexibleHeader.xhtml  index.md  index.rst  index_old.rst  make.sphinx.bat.in  meta.rst  mrd_files.md  mrd_header.md  mrd_image_data.md  mrd_messages.md  mrd_raw_data.md  mrd_streaming_protocol.md  mrd_waveform_data.md  overview.md  overview.rst  requirements.txt  schema.md  style.css  xml.rst
doc/_static/css/: custom.css
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/source/: TODO.rst  api.rst  conf.py  index.rst
docker/: build-and-test-variant.sh  build-images.sh  entrypoint-stream.sh  entrypoint.sh  test-docker-images.sh  test_docker_images.sh  validate_results.py
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  README.md  README.txt  main.c
examples/c++/: CMakeLists-Standalone.txt  CMakeLists.txt  basic_test.cpp  publication_recon_dataset.cpp  read_timing_test.cpp  test_create_dataset.cpp  test_recon_dataset.cpp
examples/data/: README.txt
examples/java/: ismrmrd_test.java
examples/matlab/: testsynth.m  (+10 more)
examples/protocol/: CMakeLists.txt  icpCallback.h  icpClient.cpp  icpClient.h  icpClientCallbacks.cpp  icpClientCallbacks.h  icpClientStarter.cpp  icpConnection.cpp  icpConnection.h  icpMTQueue.h  icpServer.cpp  icpServer.h  icpServerCallbacks.cpp  icpServerCallbacks.h  icpServerStarter.cpp  icpSession.cpp  icpSession.h  main.cpp
include/: version.in
info/: CMakeLists.txt  ismrmrd_info.cpp  ismrmrd_version.in
libsrc/: NHLBICompression.h  compression.cpp  compression_templates.h  dataset.c  dataset.cpp  ismrmrd.c  ismrmrd.cpp  meta.cpp  serialization.cpp  waveform.c  waveform.cpp  waveformdata.cpp  xml.cpp
matlab/: CMakeLists.txt  README.txt  XMLString.java  cfg.jxb  old  testread.m  testrecon.m
matlab/+ismrmrd/: Acquisition.m  AcquisitionFlags.m  AcquisitionHeader.m  AcquisitionHeaderFromBytes.m  AcquisitionHeaderToBytes.m  Dataset.m  EncodingCounters.m  FlagBit.m  Flags.m  Image.m  ImageDataType.m  ImageFlags.m  ImageHeader.m  ImageType.m  IsmrmrdDataset.m  Waveform.m  WaveformHeader.m  XMLHeader.m  example.m  file.m  hdf5_datatypes.m  headerToString.m  includejar.m  stringToHeader.m
matlab/+ismrmrd/+util/: AcquisitionHeaderFromBytes.m  ImageHeaderFromBytes.m  ImageHeaderToBytes.m  hdf5_datatypes.m  includejar.m  isInt.m
matlab/+ismrmrd/+xml/: deserialize.m  serialize.m  validate.m
matlab/+ismrmrd/old/: XMLHeader.m  file.m  hdf5_datatypes.m  isInt.m
matlab/test/: xmlTest.m
matlab/test/xml/: ismrmrd_example.xml  ismrmrd_example_extended.xml  minimal.xml  minimal_with_user_parameters.xml
protocol/: README.md
schema/: ismrmrd.xsd  ismrmrd_example.xml  ismrmrd_example_extended.xml
tests/: CMakeLists.txt  benchmark_dataset.cpp  embedded_xml.h.in  test_acquisitions.cpp  test_channels.cpp  test_compression.cpp  test_dataset.cpp  test_end_to_end.cpp  test_flags.cpp  test_images.cpp  test_ismrmrd.cpp  test_ismrmrd.h  test_main.cpp  test_meta.cpp  test_ndarray.cpp  test_quaternions.cpp  test_serialization.cpp  test_serialize.cpp  test_text.cpp  test_waveform.cpp  test_xml.cpp  test_xml_header.cpp
tests/c/: CMakeLists.txt  basic_test.c  t_cquaternions.c  t_cquaternions.cpp  t_cstructs.c  t_cstructs.cpp
tests/c++/: CMakeLists.txt  basic_test.cpp  t_image.cpp  t_ndarraycontainer.cpp  t_template.cpp
tests/matlab/: Hdf5Test.m
tests/xml/: CMakeLists.txt  test_meta.cpp  test_xml.cpp
utilities/: CMakeLists.txt  generate_cartesian_shepp_logan.cpp  ismrmrd_debug_serialization.cpp  ismrmrd_fftw.h  ismrmrd_hdf5_to_stream.cpp  ismrmrd_info.cpp  ismrmrd_io_utils.h  ismrmrd_ndarray.h  ismrmrd_phantom.cpp  ismrmrd_phantom.h  ismrmrd_stream_to_hdf5.cpp  ismrmrd_test_xml.cpp  ismrmrd_utilities_export.h  read_timing_test.cpp  recon_cartesian_2d.cpp  stream_recon_cartesian_2d.cpp
xml/: CMakeLists.txt  dump_ismrmrd_header.cpp  ismrmrd_meta.cpp  ismrmrd_meta.h  ismrmrd_xml.cpp  ismrmrd_xml.h  ismrmrd_xml_export.h
(+21 files in other folders)
