find_package(SWIG)

if(SWIG_FOUND)

    include(${SWIG_USE_FILE})

    find_package(PythonLibs)
    if(PYTHONLIBS_FOUND)
        find_package(NumPy)
        if(NUMPY_FOUND)
            if (NUMPY_VERSION VERSION_LESS "1.7")
                message("NumPy version < 1.7. Not building Python bindings")
            else (${NUMPY_VERSION} VERSION_LESS "1.7")
                add_subdirectory(python)
            endif (NUMPY_VERSION VERSION_LESS "1.7")
        else(NUMPY_FOUND)
            message("NumPy not found. Not building Python bindings")
        endif(NUMPY_FOUND)
    else(PYTHONLIBS_FOUND)
        message("PythonLibs not found. Not building Python bindings")
    endif(PYTHONLIBS_FOUND)

    find_package(JNI)
    if(JNI_FOUND)
        add_subdirectory(java)
    else(JNI_FOUND)
        message("Java Native Interface not found. Not building Java bindings")
    endif(JNI_FOUND)

endif(SWIG_FOUND)
